--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,49 @@
             text-align: center;
             margin-bottom: 20px;
             box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+            position: relative;
+        }
+
+        .header-logo {
+            position: absolute;
+            left: 30px;
+            top: 50%;
+            transform: translateY(-50%);
+            width: 80px;
+            height: 80px;
+        }
+
+        .senegal-flag {
+            width: 80px;
+            height: 60px;
+            display: flex;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+            border-radius: 4px;
+        }
+
+        .flag-stripe {
+            flex: 1;
+            position: relative;
+        }
+
+        .flag-green {
+            background: #00a651;
+        }
+
+        .flag-yellow {
+            background: #ffcc00;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .flag-red {
+            background: #ff0000;
+        }
+
+        .flag-star {
+            color: #00a651;
+            font-size: 24px;
         }
 
         .header h1 {
@@ -279,6 +322,17 @@
             padding: 8px 16px;
         }
 
+        .btn-secondary {
+            background: #6c757d;
+            color: white;
+        }
+
+        .btn-secondary:hover {
+            background: #5a6268;
+            transform: translateY(-2px);
+            box-shadow: 0 4px 15px rgba(108, 117, 125, 0.3);
+        }
+
         .btn:disabled {
             opacity: 0.6;
             cursor: not-allowed;
@@ -433,7 +487,6 @@
             }
         }
 
-        /* Styles spécifiques pour l'apurement */
         #apurement-section {
             background: linear-gradient(135deg, #e3f2fd 0%, #bbdefb 100%);
             border: 2px solid #2196f3;
@@ -452,17 +505,6 @@
             border-left-color: #9c27b0;
         }
 
-        .btn-secondary {
-            background: #6c757d;
-            color: white;
-        }
-
-        .btn-secondary:hover {
-            background: #5a6268;
-            transform: translateY(-2px);
-            box-shadow: 0 4px 15px rgba(108, 117, 125, 0.3);
-        }
-
         @media (max-width: 768px) {
             .main {
                 grid-template-columns: 1fr;
@@ -475,6 +517,12 @@
             .header h1 {
                 font-size: 2em;
             }
+
+            .header-logo {
+                position: static;
+                transform: none;
+                margin: 0 auto 20px;
+            }
         }
     </style>
 </head>
@@ -482,16 +530,23 @@
 <body>
     <div class="container">
         <header class="header">
+            <div class="header-logo">
+                <div class="senegal-flag">
+                    <div class="flag-stripe flag-green"></div>
+                    <div class="flag-stripe flag-yellow">
+                        <div class="flag-star">★</div>
+                    </div>
+                    <div class="flag-stripe flag-red"></div>
+                </div>
+            </div>
             <h1>🇸🇳 Système Douanier Sénégal</h1>
-            <p>Port de Dakar - Pays de Prime Abord - Interconnexion UEMOA via Kit MuleSoft</p>
+            <p>Port de Dakar - Pays de Prime Abord - Interconnexion UEMOA</p>
         </header>
 
-        <!-- Bannière statut Kit -->
         <div class="kit-status-banner checking" id="kit-banner">
-            <div class="loading"></div> Vérification connexion Kit d'Interconnexion MuleSoft...
+            <div class="loading"></div> Vérification connexion Kit d'Interconnexion...
         </div>
 
-        <!-- Grille de statut -->
         <div class="status-grid">
             <div class="status-card">
                 <h3>🏛️ Douanes Sénégal</h3>
@@ -503,7 +558,7 @@
             </div>
 
             <div class="status-card">
-                <h3>🔗 Kit MuleSoft</h3>
+                <h3>🔗 Kit d'Interconnexion</h3>
                 <div class="connection-status">
                     <div class="status-indicator checking" id="kit-indicator"></div>
                     <span id="kit-status-text">Vérification...</span>
@@ -526,11 +581,9 @@
         </div>
 
         <main class="main">
-            <!-- Formulaire création manifeste UEMOA - Format Sénégal -->
             <section class="card">
                 <h2>📋 Créer un Manifeste (Format UEMOA - Port de Dakar)</h2>
                 <form id="manifeste-form">
-                    <!-- Informations Manifeste -->
                     <div class="form-section">
                         <h3>📄 Informations Manifeste</h3>
                         <div class="form-row">
@@ -547,7 +600,6 @@
                         </div>
                     </div>
 
-                    <!-- Informations Navire -->
                     <div class="form-section">
                         <h3>🚢 Informations Navire</h3>
                         <div class="form-row">
@@ -564,11 +616,9 @@
                         </div>
                     </div>
 
-                    <!-- Articles -->
                     <div class="form-section">
                         <h3>📦 Articles</h3>
                         <div id="articles-container">
-                            <!-- Premier article par défaut -->
                             <div class="article-section" data-article="0">
                                 <h4>Article 1</h4>
                                 <div class="form-row triple">
@@ -618,7 +668,6 @@
                                         min="0">
                                 </div>
 
-                                <!-- Conteneurs -->
                                 <div class="conteneurs-container">
                                     <div class="conteneur-section" data-conteneur="0">
                                         <h5>Conteneur 1</h5>
@@ -655,10 +704,9 @@
                     </button>
                 </form>
 
-                <!-- Boutons de test -->
                 <div style="margin-top: 20px; text-align: center;">
                     <button class="btn btn-test" onclick="testerConnexionKit()">
-                        🔧 Tester Kit MuleSoft
+                        🔧 Tester Kit d'Interconnexion
                     </button>
                     <button class="btn btn-diagnostic" onclick="lancerDiagnostic()">
                         🩺 Diagnostic Complet
@@ -666,7 +714,6 @@
                 </div>
             </section>
 
-            <!-- Manifestes récents -->
             <section class="card">
                 <h2>📄 Manifestes Récents - Port de Dakar</h2>
                 <div class="manifeste-list" id="manifestes-list">
@@ -677,7 +724,6 @@
                 </button>
             </section>
 
-            <!-- Section Apurement et Levée (Étapes 18-19) -->
             <section class="card full-width" id="apurement-section" style="display: none;">
                 <h2>🔓 Apurement et Levée des Marchandises (Étapes 18-19)</h2>
                 <div class="form-section">
@@ -762,16 +808,15 @@
                 </div>
             </section>
 
-            <!-- Interactions Kit en temps réel -->
             <section class="card full-width">
-                <h2>🔗 Interactions Kit MuleSoft - Workflow Temps Réel</h2>
+                <h2>🔗 Interactions Kit d'Interconnexion - Workflow Temps Réel</h2>
                 <div class="kit-interactions" id="kit-interactions">
                     <div class="interaction-item">
                         <div class="interaction-header">
                             <div class="interaction-title">🇸🇳 Système Sénégal initialisé</div>
                             <div class="interaction-time" id="init-time"></div>
                         </div>
-                        <div>Port de Dakar - Monitoring des échanges avec Kit MuleSoft activé - Format UEMOA</div>
+                        <div>Port de Dakar - Monitoring des échanges avec Kit d'Interconnexion activé - Format UEMOA</div>
                     </div>
                 </div>
             </section>
@@ -989,7 +1034,6 @@
             console.log('🇸🇳 Initialisation Système Douanier Sénégal - Port de Dakar');
 
             try {
-                // Définir les dates par défaut
                 const dateElement = document.getElementById('date_arrivee');
                 if (dateElement) {
                     dateElement.value = new Date().toISOString().split('T')[0];
@@ -1005,15 +1049,12 @@
                     initTimeElement.textContent = new Date().toLocaleTimeString();
                 }
 
-                // Vérifications périodiques
                 verifierStatutKit();
                 statusInterval = setInterval(verifierStatutKit, 30000);
 
-                // Actualisation données
                 chargerDonnees();
                 refreshInterval = setInterval(chargerDonnees, 10000);
 
-                // Gestionnaire de formulaire
                 const form = document.getElementById('manifeste-form');
                 if (form) {
                     form.addEventListener('submit', creerManifeste);
@@ -1039,14 +1080,12 @@
 
             const originalText = submitBtn.innerHTML;
 
-            // Disable button et show loading
             submitBtn.disabled = true;
             submitBtn.innerHTML = '<div class="loading"></div> Étapes 1-5 en cours...';
 
             try {
                 console.log('🇸🇳 [SÉNÉGAL] DÉBUT WORKFLOW - Création manifeste Port de Dakar');
 
-                // Collecte des données UEMOA du formulaire
                 const manifesteUEMOA = {
                     annee_manif: getFieldValue('annee_manif'),
                     bureau_manif: getFieldValue('bureau_manif'),
@@ -1063,7 +1102,6 @@
                     articles: []
                 };
 
-                // Collecte des articles depuis le DOM
                 const articleSections = document.querySelectorAll('.article-section');
 
                 articleSections.forEach((section, index) => {
@@ -1089,7 +1127,6 @@
                         conteneurs: []
                     };
 
-                    // Collecte des conteneurs
                     const conteneurSections = section.querySelectorAll('.conteneur-section');
                     conteneurSections.forEach(conteneurSection => {
                         const conteneur = {
@@ -1108,7 +1145,6 @@
 
                 console.log('🇸🇳 [SÉNÉGAL] Manifeste UEMOA préparé:', manifesteUEMOA);
 
-                // Validation Sénégal
                 const erreurs = [];
                 if (!manifesteUEMOA.numero_manif) erreurs.push('Numéro manifeste requis');
                 if (!manifesteUEMOA.consignataire) erreurs.push('Consignataire requis');
@@ -1122,7 +1158,6 @@
                 ajouterInteraction('🇸🇳 ÉTAPES 1-3: Création manifeste',
                     `N°${manifesteUEMOA.numero_manif} - ${manifesteUEMOA.consignataire} - ${manifesteUEMOA.articles.length} articles`);
 
-                // APPEL API Sénégal
                 const response = await fetch(API_BASE + '/manifeste/creer', {
                     method: 'POST',
                     headers: {
@@ -1163,15 +1198,14 @@
                         ajouterInteraction('🚀 ÉTAPES 4-5: Transmission Kit',
                             `✅ Extraction transmise vers pays destination - Manifeste N°${manifesteId}`);
                     } else {
-                        ajouterInteraction('⚠️ ÉTAPES 4-5: Kit MuleSoft',
+                        ajouterInteraction('⚠️ ÉTAPES 4-5: Kit d\'Interconnexion',
                             `Extraction non transmise - Mode local uniquement`);
                     }
 
-                    // Reset form
                     resetForm();
 
                 } else if (resultStatus === 'PARTIAL_SUCCESS') {
-                    afficherNotification('🇸🇳 ⚠️ Manifeste créé, erreur transmission Kit MuleSoft', 'warning');
+                    afficherNotification('🇸🇳 ⚠️ Manifeste créé, erreur transmission Kit d\'Interconnexion', 'warning');
 
                     const erreurKit = getValue(result, 'transmissionKit.echec.erreur', 'Erreur Kit inconnue');
                     ajouterInteraction('⚠️ ÉTAPES 4-5: Transmission Kit', `Échec - ${erreurKit}`);
@@ -1181,7 +1215,6 @@
                     throw new Error(errorMessage);
                 }
 
-                // Actualisation
                 await new Promise(resolve => setTimeout(resolve, 1000));
                 await Promise.allSettled([
                     chargerStatistiques().catch(err => console.warn('Erreur stats:', err)),
@@ -1208,11 +1241,9 @@
                 if (form) {
                     form.reset();
 
-                    // Réinitialiser dates
                     document.getElementById('date_arrivee').value = new Date().toISOString().split('T')[0];
                     document.querySelector('input[name="date_emb"]').value = new Date().toISOString().split('T')[0];
 
-                    // Valeurs par défaut
                     document.getElementById('annee_manif').value = '2025';
                     document.getElementById('bureau_manif').value = '18N';
                     document.getElementById('code_cgt').value = '014';
@@ -1226,10 +1257,10 @@
             }
         }
 
-        // ✅ VÉRIFICATION STATUT KIT MULESOFT
+        // ✅ VÉRIFICATION STATUT KIT D'INTERCONNEXION
         async function verifierStatutKit() {
             try {
-                console.log('🔍 [SÉNÉGAL] Test statut Kit MuleSoft...');
+                console.log('🔍 [SÉNÉGAL] Test statut Kit d\'Interconnexion...');
 
                 const response = await fetch(`${API_BASE}/health`, {
                     method: 'GET',
@@ -1259,7 +1290,7 @@
                 if (accessible) {
                     if (banner) {
                         banner.className = 'kit-status-banner connected';
-                        banner.innerHTML = `✅ Kit MuleSoft opérationnel - ${status} ${latence ? `(${latence}ms)` : ''}`;
+                        banner.innerHTML = `✅ Kit d'Interconnexion opérationnel - ${status} ${latence ? `(${latence}ms)` : ''}`;
                     }
 
                     if (indicator) indicator.className = 'status-indicator connected';
@@ -1270,7 +1301,7 @@
                 } else {
                     if (banner) {
                         banner.className = 'kit-status-banner disconnected';
-                        banner.innerHTML = `⚠️ Kit MuleSoft inaccessible - Service local Sénégal opérationnel`;
+                        banner.innerHTML = `⚠️ Kit d'Interconnexion inaccessible - Service local Sénégal opérationnel`;
                     }
 
                     if (indicator) indicator.className = 'status-indicator';
@@ -1285,7 +1316,7 @@
                 const banner = document.getElementById('kit-banner');
                 if (banner) {
                     banner.className = 'kit-status-banner disconnected';
-                    banner.innerHTML = `⚠️ Kit MuleSoft non vérifiable - Service Sénégal actif`;
+                    banner.innerHTML = `⚠️ Kit d'Interconnexion non vérifiable - Service Sénégal actif`;
                 }
                 kitConnected = false;
             }
@@ -1415,13 +1446,13 @@
             }
         }
 
-        // ✅ TEST CONNEXION KIT MULESOFT
+        // ✅ TEST CONNEXION KIT D'INTERCONNEXION
         async function testerConnexionKit() {
-            ajouterInteraction('🔧 Test Kit MuleSoft', 'Test de connectivité...');
+            ajouterInteraction('🔧 Test Kit d\'Interconnexion', 'Test de connectivité...');
             afficherNotification('🔧 Test Kit en cours...', 'info');
 
             try {
-                console.log('🔧 [SÉNÉGAL] Test Kit MuleSoft avec retry...');
+                console.log('🔧 [SÉNÉGAL] Test Kit d\'Interconnexion avec retry...');
 
                 const tentatives = [
                     { timeout: 15000, nom: 'Standard' },
@@ -1464,7 +1495,7 @@
 
                         if (accessible) {
                             console.log(`✅ [SÉNÉGAL] Kit accessible (tentative ${i + 1}, latence: ${latence}ms)`);
-                            afficherNotification(`✅ Kit MuleSoft accessible (${latence}ms) - Tentative ${i + 1}`, 'success');
+                            afficherNotification(`✅ Kit d'Interconnexion accessible (${latence}ms) - Tentative ${i + 1}`, 'success');
                             ajouterInteraction('🔧 Test Kit', `✅ Succès tentative ${i + 1} - Latence: ${latence}ms`);
                             return true;
                         } else {
@@ -1490,11 +1521,11 @@
                 let errorMessage = error.message || 'Erreur inconnue';
 
                 if (errorMessage.includes('signal timed out')) {
-                    errorMessage = 'Timeout - Kit MuleSoft met trop de temps à répondre';
+                    errorMessage = 'Timeout - Kit d\'Interconnexion met trop de temps à répondre';
                 } else if (errorMessage.includes('Failed to fetch')) {
-                    errorMessage = 'Impossible de joindre le Kit MuleSoft';
+                    errorMessage = 'Impossible de joindre le Kit d\'Interconnexion';
                 } else if (errorMessage.includes('NetworkError')) {
-                    errorMessage = 'Erreur réseau - Kit MuleSoft indisponible';
+                    errorMessage = 'Erreur réseau - Kit d\'Interconnexion indisponible';
                 }
 
                 afficherNotification(`❌ Kit inaccessible: ${errorMessage}`, 'error');
@@ -1510,12 +1541,11 @@
 
             const resultats = {
                 serviceSenegal: false,
-                kitMulesoft: false,
+                kitInterconnexion: false,
                 baseDonnees: false
             };
 
             try {
-                // Test service Sénégal
                 try {
                     console.log('🩺 [SÉNÉGAL] Test service local...');
                     const healthResponse = await fetch(`${API_BASE}/health`, {
@@ -1526,13 +1556,12 @@
                     if (healthResponse.ok) {
                         const healthData = await healthResponse.json();
                         const kitInfo = getValue(healthData, 'kit', {});
-                        resultats.kitMulesoft = getValue(kitInfo, 'accessible', false);
+                        resultats.kitInterconnexion = getValue(kitInfo, 'accessible', false);
                     }
                 } catch (healthError) {
                     console.warn('🩺 [SÉNÉGAL] Erreur test santé:', healthError);
                 }
 
-                // Test base de données
                 try {
                     console.log('🩺 [SÉNÉGAL] Test base de données...');
                     const statsResponse = await fetch(`${API_BASE}/statistiques`, {
@@ -1609,7 +1638,6 @@
                         throw new Error('Ce manifeste ne peut pas être apuré. Statut: ' + data.manifeste.statut);
                     }
 
-                    // Remplir les informations
                     document.getElementById('apu-numero-manifeste').textContent = data.manifeste.numero;
                     document.getElementById('apu-navire').textContent = data.manifeste.navire;
                     document.getElementById('apu-transporteur').textContent = data.manifeste.consignataire;
@@ -1617,7 +1645,6 @@
                     document.getElementById('apu-pays').textContent = data.autorisation.paysDeclarant;
                     document.getElementById('apu-date-mainlevee').textContent = new Date(data.autorisation.dateReception).toLocaleString('fr-FR');
 
-                    // Formulaire
                     document.getElementById('type-confirmation').value = 'DOUANE';
                     document.getElementById('agent-confirmation').value = '';
                     document.getElementById('observations').value = '';
