--- a/public/libre-pratique.html
+++ b/public/libre-pratique.html
@@ -168,6 +168,16 @@
             animation: blink 1s infinite;
         }
 
+        .copyright {
+            text-align: center;
+            padding: 20px;
+            margin-top: 30px;
+            color: rgba(255, 255, 255, 0.8);
+            font-size: 0.9em;
+            background: rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+        }
+
         @keyframes pulse {
             0% {
                 opacity: 1;
@@ -1010,6 +1020,10 @@
                 </div>
             </section>
         </main>
+
+        <div class="copyright">
+            © 2025 Jasmine Conseil - Prototype Mission d'Interconnexion UEMOA
+        </div>
     </div>
 
     <div id="notification" class="notification"></div>
