--- a/public/transit.html
+++ b/public/transit.html
@@ -442,6 +442,16 @@
             animation: spin 1s ease-in-out infinite;
         }
 
+        .copyright {
+            text-align: center;
+            padding: 20px;
+            margin-top: 30px;
+            color: rgba(255, 255, 255, 0.8);
+            font-size: 0.9em;
+            background: rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+        }
+
         @keyframes spin {
             to { transform: rotate(360deg); }
         }
@@ -616,6 +626,10 @@
                 </div>
             </section>
         </main>
+
+        <div class="copyright">
+            © 2025 Jasmine Conseil - Prototype Mission d'Interconnexion UEMOA
+        </div>
     </div>
 
     <div id="notification" class="notification"></div>
