--- a/public/libre-pratique.html
+++ b/public/libre-pratique.html
@@ -764,7 +764,7 @@
             </section>
 
             <section class="card">
-                <h2>📋 Créer un Manifeste (Format UEMOA - Port de Dakar)</h2>
+                <h2>📋 Enregistrer un Manifeste - Port de Dakar</h2>
                 <form id="manifeste-form">
                     <div class="form-section">
                         <h3>📄 Informations Manifeste</h3>
