--- a/public/transit.html
+++ b/public/transit.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🇸🇳 Sénégal - Transit - Port de Dakar - Système Douanier UEMOA</title>
+    <title>🇸🇳 Sénégal - Transit - Port de Dakar - Système d'Information Douanier</title>
     
     <!-- Script d'authentification -->
     <script src="/auth.js"></script>
@@ -499,7 +499,7 @@
             <!-- Conteneur pour les infos utilisateur -->
             <div class="user-info-container" id="user-info-container"></div>
             
-            <h1>🇸🇳 Système Douanier Sénégal - Transit</h1>
+            <h1>🇸🇳 Système d'Information Douanier Sénégal - Transit</h1>
             <p>Port de Dakar - Pays de Prime Abord - Interconnexion UEMOA</p>
         </header>
 
@@ -542,7 +542,7 @@
 
         <main class="main">
             <section class="card">
-                <h2>🚛 Créer une Déclaration Transit (Format UEMOA - Port de Dakar)</h2>
+                <h2>🚛 Enregistrer une Déclaration Transit - Port de Dakar</h2>
                 <form id="transit-form">
                     <div class="form-section">
                         <h3>📋 Informations Transit</h3>
