--- a/public/login.html
+++ b/public/login.html
@@ -266,7 +266,7 @@
             <div class="flag-stripe flag-red"></div>
         </div>
 
-        <h1>🇸🇳 Système Douanier</h1>
+        <h1>🇸🇳 Système d'Information Douanier</h1>
         <p class="subtitle">Port de Dakar - Connexion Sécurisée</p>
 
         <div id="alert-container"></div>
