--- a/public/libre-pratique.html
+++ b/public/libre-pratique.html
@@ -786,8 +786,8 @@
                                 <input type="number" id="numero_manif" placeholder="Numéro manifeste" required>
                             </div>
                             <div class="form-group">
-                                <label for="code_cgt">Code CGT *</label>
-                                <input type="text" id="code_cgt" placeholder="Code CGT" value="014" required>
+                                <label for="code_cgt">Code Consignataire *</label>
+                                <input type="text" id="code_cgt" placeholder="Code Consignataire" value="014" required>
                             </div>
                         </div>
                         <div class="form-row">
